--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,3 +19,8 @@ spring:
     url: jdbc:mysql://localhost:3306/crud?allowPublicKeyRetrieval=true&sslMode=DISABLED&useSSL=false&serverTimezone=UTC
     username: root
     password: docker
+
+crud:
+  rabbitmq:
+    exchange: crud.exchange
+    routingkey: crud.product.routingkey
